customer order nav is drafted

--- a/src/app/components/page_components/dashboard_components/nav_components/customer-order-nav-component/customer-order-nav-component.html
+++ b/src/app/components/page_components/dashboard_components/nav_components/customer-order-nav-component/customer-order-nav-component.html
@@ -1,4 +1,5 @@
 <div class="dashboard-container">
+
     <!-- Reusable List (SEARCH + TABLE + PAGINATION) -->
     <app-dashboard-table-component [data]="items()" [columns]="columns" searchLabel="Search Order"
         [searchValue]="searchText()" [totalCount]="totalCount()" [pageSize]="pageSize()"
@@ -14,4 +15,7 @@
             </button>
         </ng-template>
     </app-dashboard-table-component>
+
+    <!-- ORDER SUMMARY -->
+    <app-order-summary-component *ngIf="isViewMode() && selectedOrder()" [order]="selectedOrder()!"></app-order-summary-component>
 </div>
