--- a/src/app/components/page_components/dashboard_components/nav_components/customer-order-nav-component/customer-order-nav-component.scss
+++ b/src/app/components/page_components/dashboard_components/nav_components/customer-order-nav-component/customer-order-nav-component.scss
@@ -1,1 +1,1 @@
-@use '../../../../../common_styles/elements/dashboard_style.scss'
+@use '../../../../../common_styles/elements/dashboard_style.scss';
