--- a/src/app/components/reusable_components/order-summary-component/order-summary-component.html
+++ b/src/app/components/reusable_components/order-summary-component/order-summary-component.html
@@ -47,7 +47,9 @@
         <ng-container matColumnDef="product">
             <th mat-header-cell *matHeaderCellDef>Product</th>
             <td mat-cell *matCellDef="let row">
-                {{ row.electronicItemResponseDto.electronicItemName }}
+                <img [src]="fileService.getElectronicItemImage(row.electronicItemResponseDto)"
+                    alt="product" />
+                <span>{{ row.electronicItemResponseDto.electronicItemName }}</span>
             </td>
         </ng-container>
 
