--- a/src/app/components/reusable_components/order-summary-component/order-summary-component.scss
+++ b/src/app/components/reusable_components/order-summary-component/order-summary-component.scss
@@ -30,6 +30,14 @@ table {
   margin-top: 12px;
 }
 
+.img {
+  width: 50px;
+  height: 50px;
+  object-fit: contain;
+  border-radius: 6px;
+  background: #fff;
+}
+
 .total {
   text-align: right;
   margin-top: 16px;
