--- a/src/app/components/reusable_components/order-summary-component/order-summary-component.html
+++ b/src/app/components/reusable_components/order-summary-component/order-summary-component.html
@@ -46,10 +46,12 @@
         <!-- Product -->
         <ng-container matColumnDef="product">
             <th mat-header-cell *matHeaderCellDef>Product</th>
-            <td mat-cell *matCellDef="let row">
-                <img [src]="fileService.getElectronicItemImage(row.electronicItemResponseDto)"
+            <td mat-cell *matCellDef="let row" class="product-cell">
+                <img class="product-image" [src]="fileService.getElectronicItemImage(row.electronicItemResponseDto)"
                     alt="product" />
-                <span>{{ row.electronicItemResponseDto.electronicItemName }}</span>
+                <span class="product-name">
+                    {{ row.electronicItemResponseDto.electronicItemName }}
+                </span>
             </td>
         </ng-container>
 
