--- a/src/app/components/page_components/dashboard_components/nav_components/customer-order-nav-component/customer-order-nav-component.html
+++ b/src/app/components/page_components/dashboard_components/nav_components/customer-order-nav-component/customer-order-nav-component.html
@@ -1,5 +1,48 @@
 <div class="dashboard-container">
 
+    <mat-toolbar color="primary" class="products-toolbar">
+        <!-- [Start: Order Statuses menu] -->
+        <button mat-button [matMenuTriggerFor]="orderStatusMenu" class="filter-button"
+            [class.active-filter]="selectedOrderStatusId() !== undefined">
+            {{ selectedOrderStatusName() ?? 'Order Status' }}
+            <mat-icon>arrow_drop_down</mat-icon>
+        </button>
+
+        <mat-menu #orderStatusMenu="matMenu">
+            <button mat-menu-item (click)="onOrderStausSelect(undefined)"
+                [class.selected-menu-item]="selectedOrderStatusId() === undefined">
+                All Order Statuses
+            </button>
+
+            <button mat-menu-item *ngFor="let orderStatus of orderStatuses()" (click)="onOrderStausSelect(orderStatus.orderStatusID)"
+                [class.selected-menu-item]="selectedOrderStatusId() === orderStatus.orderStatusID">
+                {{ orderStatus.orderStatusName }}
+            </button>
+        </mat-menu>
+        <!-- [End: Order status menu] -->
+
+
+        <!-- [Start: Payment Statuses menu] -->
+        <button mat-button [matMenuTriggerFor]="paymentStatusMenu" class="filter-button"
+            [class.active-filter]="selectedPaymentStatusId() !== undefined">
+            {{ selectedPaymentStatusName() ?? 'Payment Status' }}
+            <mat-icon>arrow_drop_down</mat-icon>
+        </button>
+
+        <mat-menu #paymentStatusMenu="matMenu">
+            <button mat-menu-item (click)="onPaymentStatusSelect(undefined)"
+                [class.selected-menu-item]="selectedPaymentStatusId() === undefined">
+                All Payment Statuses
+            </button>
+
+            <button mat-menu-item *ngFor="let paymentStatus of paymentStatuses()" (click)="onPaymentStatusSelect(paymentStatus.paymentStatusID)"
+                [class.selected-menu-item]="selectedPaymentStatusId() === paymentStatus.paymentStatusID">
+                {{ paymentStatus.paymentStatusName }}
+            </button>
+        </mat-menu>
+        <!-- [End: payment Status menu] -->
+    </mat-toolbar>
+
     <!-- Reusable List (SEARCH + TABLE + PAGINATION) -->
     <app-dashboard-table-component [data]="items()" [columns]="columns" searchLabel="Search Order"
         [searchValue]="searchText()" [totalCount]="totalCount()" [pageSize]="pageSize()"
