--- a/src/app/components/reusable_components/dashboard_nav_component/dashboard_building_blocks/dashboard-table-component/dashboard-table-component.html
+++ b/src/app/components/reusable_components/dashboard_nav_component/dashboard_building_blocks/dashboard-table-component/dashboard-table-component.html
@@ -1,7 +1,7 @@
 <mat-card class="dashboard-list">
 
     <!-- SEARCH -->
-    <mat-form-field appearance="outline" class="full-width">
+    <mat-form-field *ngIf="!disableSearch" appearance="outline" class="full-width">
         <mat-label>{{ searchLabel }}</mat-label>
         <input matInput [ngModel]="searchValue" (ngModelChange)="searchChange.emit($event)" />
     </mat-form-field>
