customer nav is drafted

--- a/src/app/components/page_components/dashboard_components/nav_components/customer-order-nav-component/customer-order-nav-component.html
+++ b/src/app/components/page_components/dashboard_components/nav_components/customer-order-nav-component/customer-order-nav-component.html
@@ -53,7 +53,7 @@
                 <mat-icon>visibility</mat-icon>
             </button>
 
-            <button mat-icon-button color="accent" (click)="edit(row)">
+            <button mat-icon-button color="accent" *ngIf="canEdit(row)" (click)="edit(row)">
                 <mat-icon>edit</mat-icon>
             </button>
         </ng-template>
