confirmation input fiels is styled

--- a/src/app/components/reusable_components/confirm-dialog-box-component/confirm-dialog-box-component.html
+++ b/src/app/components/reusable_components/confirm-dialog-box-component/confirm-dialog-box-component.html
@@ -3,7 +3,7 @@
 <mat-dialog-content>
   <p>{{ data.message }}</p>
 
-  <mat-form-field *ngIf="hasInput" appearance="outline" class="w-100">
+  <mat-form-field *ngIf="hasInput" appearance="outline" class="w-100 centered-field">
     <input matInput [(ngModel)]="inputValue" [placeholder]="inputPlaceholder" [required]="inputRequired"
       [type]="inputType" />
   </mat-form-field>
