--- a/src/app/components/reusable_components/confirm-dialog-box-component/confirm-dialog-box-component.scss
+++ b/src/app/components/reusable_components/confirm-dialog-box-component/confirm-dialog-box-component.scss
@@ -1,3 +1,12 @@
 mat-dialog-content {
   font-size: 14px;
 }
+
+.centered-field {
+  display: flex;
+  justify-content: center;
+}
+
+.centered-field .mat-mdc-form-field {
+  width: 100%;
+}
