--- a/src/app/components/reusable_components/dashboard_nav_component/dashboard_building_blocks/dashboard-table-component/dashboard-table-component.html
+++ b/src/app/components/reusable_components/dashboard_nav_component/dashboard_building_blocks/dashboard-table-component/dashboard-table-component.html
@@ -28,11 +28,12 @@
         </ng-container>
 
         <!-- ACTIONS -->
-        <ng-container matColumnDef="actions">
+        <ng-container *ngIf="showActions" matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let row">
                 <ng-container *ngIf="actionsTemplate">
-                    <ng-container *ngTemplateOutlet="actionsTemplate; context: { $implicit: row }"></ng-container>
+                    <ng-container *ngTemplateOutlet="actionsTemplate; context: { $implicit: row }">
+                    </ng-container>
                 </ng-container>
             </td>
         </ng-container>
