bnpl plan nav component is drafted

--- a/src/app/components/page_components/dashboard_components/nav_components/bnpl-plan-nav-component/bnpl-plan-nav-component.html
+++ b/src/app/components/page_components/dashboard_components/nav_components/bnpl-plan-nav-component/bnpl-plan-nav-component.html
@@ -1,1 +1,7 @@
-<p>bnpl-plan-nav-component works!</p>
+<div class="dashboard-container">
+    <!-- Reusable List (SEARCH + TABLE + PAGINATION) -->
+    <app-dashboard-table-component [data]="items()" [columns]="columns" [showActions]="false"
+        searchLabel="Search Bnpl Plan" [searchValue]="searchText()" [totalCount]="totalCount()" [pageSize]="pageSize()"
+        (searchChange)="onSearch($event)" (pageChange)="onPageChange($event)">
+    </app-dashboard-table-component>
+</div>
