bnpl installmet calculator is drafted

--- a/src/app/components/page_components/place-order-component/place-order-component.html
+++ b/src/app/components/page_components/place-order-component/place-order-component.html
@@ -75,9 +75,9 @@
 
         <!-- ACTION -->
         <button mat-raised-button color="primary" class="pay-btn" (click)="confirmPayment()">
-            Confirm & Pay
+            {{ paymentType === 'NOW' ? 'Pay Now' : 'Continue to Installments' }}
         </button>
-
+        
     </mat-card>
 
 </div>
