--- a/src/app/components/page_components/shopping-cart-component/shopping-cart-component.html
+++ b/src/app/components/page_components/shopping-cart-component/shopping-cart-component.html
@@ -1,6 +1,8 @@
 <div class="app-container-wrapper">
     <div class="cart-container" *ngIf="cartItems().length; else emptyCart">
 
+        <h2 class="cart-title">Shopping Cart</h2>
+
         <table mat-table [dataSource]="cartItems()" class="app-mat-table mat-elevation-z2">
 
             <!-- ROW NUMBER -->
