checkout component is added

--- a/src/app/components/page_components/shopping-cart-component/shopping-cart-component.html
+++ b/src/app/components/page_components/shopping-cart-component/shopping-cart-component.html
@@ -74,8 +74,8 @@
                 <button mat-stroked-button color="warn" (click)="cancelCart()">
                     Cancel
                 </button>
-                <button mat-raised-button color="primary" (click)="placeOrder()">
-                    Place Order
+                <button mat-raised-button color="primary" (click)="checkoutOrder()">
+                    Checkout Order
                 </button>
             </div>
         </div>
