order submit wizard is updated

--- a/src/app/components/page_components/order_submit_wizard_components/base-order-submit-wizard-component/base-order-submit-wizard-component.html
+++ b/src/app/components/page_components/order_submit_wizard_components/base-order-submit-wizard-component/base-order-submit-wizard-component.html
@@ -5,10 +5,16 @@
         <p>Follow the steps to complete your purchase</p>
     </div>
 
-    <!-- Dynamic Stepper -->
     <mat-stepper [selectedIndex]="activeStepIndex()" linear>
-        <mat-step *ngFor="let step of steps" [label]="step.label">
+
+        <mat-step *ngFor="let step of steps" [label]="step.label" [completed]="stepState.isCompleted(step.route)">
+
+            <ng-template matStepperIcon="done">
+                <mat-icon class="step-done-icon">check_circle</mat-icon>
+            </ng-template>
+
         </mat-step>
+
     </mat-stepper>
 
     <mat-divider></mat-divider>
